# GenSBI-examples

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  create_hf_dataset.ipynb  create_hf_dataset_GW.ipynb  gw_dataset.py  metadata.json  pyproject.toml  scholar_evaluation.md  test1.py  training_time_tables.tex  training_times.csv  two_moons_times.csv
examples/: diffusion_2d_unconditional.ipynb  flow_matching_2d_unconditional.ipynb  flow_matching_2d_unconditional_1b.ipynb  flow_matching_2d_unconditional_flux1joint.ipynb  flow_matching_2d_unconditional_full.ipynb  flow_matching_2d_unconditional_simformer.ipynb  flow_matching_2d_unconditional_v2.ipynb  flow_matching_2d_unconditional_v3_test.ipynb
old/: flow_matching_2d_discrete.ipynb  flow_matching_2d_test.ipynb  sbi_example.ipynb  train_sbi_model_simformer.py  train_sbi_model_simformer_v2.py
scripts/: compile_sbibm_results.py  extract_two_moons_times.py  generate_config_tables.py  generate_model_card.py  generate_training_time_tables.py  make_datasets_sbibm.py  make_notebook copy.py  make_notebook.py  make_notebook_two_moons.py  notebook_stub.txt  notebook_template.md  parse_training_times.py  plot_model_c2st.py  plot_model_c2st_best.py  test_table.tex  train_sbi_model.py  train_sbi_model_flux_v3.py  train_sbi_model_sbibm.py  train_sbi_model_sbibm_v2.py  train_sbi_model_simformer.py  train_sbi_model_simformer_v2.py  train_sbi_model_simformer_v3.py  train_sbi_model_simformer_v4 copy.py  train_sbi_model_simformer_v4.py  train_sbi_model_simformer_v6.py  train_sbi_model_simformer_v6b.py  two_moons_template.md  write_stats.py
sub/: recovery_maf_nle.sub  recovery_tarflow_field_nle.sub  recovery_tarflow_image_npe.sub  recovery_tarflow_nle.sub  start_training.sh  start_training_old.sh  train_all_models.sh  train_examples.sub  train_model.sh  train_model.sub  train_model_bernoulli_glm.sub  train_model_gaussian_linear.sub  train_model_gaussian_linear_uniform.sub  train_model_gaussian_mixture.sub  train_model_grf.sub  train_model_grf_256.sub  train_model_grf_PixelDiT.sub  train_model_grf_PixelDiT_256.sub  train_model_grf_PixelDiT_fixedtheta.sub  train_model_gw.sub  train_model_lensing.sub  train_model_maf_nle.sub  train_model_script.sub  train_model_slcp.sub  train_model_tarflow_grf.sub  train_model_tarflow_grf256.sub  train_model_tarflow_nle.sub  train_model_tarflow_npe.sub  train_model_two_moons.sub  train_model_two_moons_old.sub  train_my_first_model.sub
test/: test_graph.py  test_has_posterior_samples.py  test_lensing_reference.py  test_mask.py  test_normalization.py  test_normalize.py  test_process_conditional.py  test_tasks.py  test_tasks_errors.py
tests/: conf_gw.py  dataset_iter.ipynb  lr_test.py  test_c2st.py  test_graph.py  test_gw.ipynb  test_gw_v2.ipynb  testme.py  (+29 more)
(+8064 files in other folders)
