[project]
name = "gensbi-examples"
version = "0.4.0"
description = "Examples for the GenSBI library"
authors = [{ name = "Aurelio Amerio", email = "dev@gensbi.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "jax>=0.9.0",
    "datasets",
    "huggingface_hub",
    "matplotlib>=3.10",
    "numpy>=2.3.5",
    "flax>=0.12.4",
    "grain>=0.2.15",
    "imageio>=2.37.2",
]

[project.urls]
Homepage = "https://github.com/aurelio-amerio/GenSBI-examples"
Issues = "https://github.com/aurelio-amerio/GenSBI-examples/issues"

[dependency-groups]
lint = [
    "flake8",
]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-mock",
    "pytest-env",
    "genbadge[all]",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-n 2"
env = [
    "JAX_PLATFORMS=cpu"
]
testpaths = [
    "tests",
]
