[project]
name = "gensbi-examples"
version = "0.4.5"
description = "Examples for the GenSBI library"
authors = [{ name = "Aurelio Amerio", email = "dev@gensbi.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "gensbi",
    "jax>=0.10.2, <0.12.0",
    "datasets",
    "huggingface_hub",
    "matplotlib>=3.10",
    "numpy>=2.3.5",
    "flax>=0.12.4",
    "grain>=0.2.15",
    "imageio>=2.37.2",
    "sbibm-jax[loader]>=0.1.3",
]

[project.urls]
Homepage = "https://github.com/aurelio-amerio/GenSBI-examples"
Issues = "https://github.com/aurelio-amerio/GenSBI-examples/issues"

[dependency-groups]
lint = [
    "flake8",
]
notebooks = [
    "jupytext",
]
dev = [
    {include-group = "lint"},
    {include-group = "notebooks"},
]

[tool.uv]
package = false
